@@ -5,13 +5,13 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.commons.core.Messages.MESSAGE_TUTEES_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
+import static seedu.address.testutil.TypicalTutees.BENSON;
 import static seedu.address.testutil.TypicalTutees.CARL;
-import static seedu.address.testutil.TypicalTutees.ELLE;
-import static seedu.address.testutil.TypicalTutees.FIONA;
 import static seedu.address.testutil.TypicalTutees.getTypicalTrackO;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -19,12 +19,14 @@ import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
 import seedu.address.model.exceptions.ScheduleClashException;
-import seedu.address.model.tutee.NameContainsKeywordsPredicate;
+import seedu.address.model.tutee.CollectivePredicate;
 
 /**
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
+    private static final List<String> EMPTY_KEYWORD_LIST = Collections.emptyList();
+
     private Model model = new ModelManager(getTypicalTrackO(), new UserPrefs());
     private Model expectedModel = new ModelManager(getTypicalTrackO(), new UserPrefs());
 
@@ -33,10 +35,12 @@ public class FindCommandTest {
 
     @Test
     public void equals() {
-        NameContainsKeywordsPredicate firstPredicate =
-                new NameContainsKeywordsPredicate(Collections.singletonList("first"));
-        NameContainsKeywordsPredicate secondPredicate =
-                new NameContainsKeywordsPredicate(Collections.singletonList("second"));
+        CollectivePredicate firstPredicate =
+                new CollectivePredicate(Collections.singletonList("first"),
+                        EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST);
+        CollectivePredicate secondPredicate =
+                new CollectivePredicate(Collections.singletonList("second"),
+                        EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST);
 
         FindCommand findFirstCommand = new FindCommand(firstPredicate);
         FindCommand findSecondCommand = new FindCommand(secondPredicate);
@@ -61,7 +65,10 @@ public class FindCommandTest {
     @Test
     public void execute_zeroKeywords_noTuteeFound() {
         String expectedMessage = String.format(MESSAGE_TUTEES_LISTED_OVERVIEW, 0);
-        NameContainsKeywordsPredicate predicate = preparePredicate(" ");
+        String keyword = " ";
+        List<String> nameList = Arrays.asList(keyword.split("\\s+"));
+        CollectivePredicate predicate = new CollectivePredicate(nameList,
+                EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST, EMPTY_KEYWORD_LIST);
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredTuteeList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
@@ -69,19 +76,28 @@ public class FindCommandTest {
     }
 
     @Test
-    public void execute_multipleKeywords_multipleTuteesFound() {
-        String expectedMessage = String.format(MESSAGE_TUTEES_LISTED_OVERVIEW, 3);
-        NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
+    public void execute_multipleKeywords_tuteesFound() {
+        String expectedMessage = String.format(MESSAGE_TUTEES_LISTED_OVERVIEW, 1);
+        String keyword = "Physics Chemistry";
+        List<String> subjectList = Arrays.asList(keyword.split("\\s+"));
+        CollectivePredicate predicate = new CollectivePredicate(EMPTY_KEYWORD_LIST,
+                EMPTY_KEYWORD_LIST, subjectList, EMPTY_KEYWORD_LIST);
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredTuteeList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredTuteeList());
+        assertEquals(Arrays.asList(CARL), model.getFilteredTuteeList());
     }
 
-    /**
-     * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
-     */
-    private NameContainsKeywordsPredicate preparePredicate(String userInput) {
-        return new NameContainsKeywordsPredicate(Arrays.asList(userInput.split("\\s+")));
+    @Test
+    public void execute_multipleKeywords_multipleTuteesFound() {
+        String expectedMessage = String.format(MESSAGE_TUTEES_LISTED_OVERVIEW, 2);
+        String keyword = "Chemistry";
+        List<String> subjectList = Arrays.asList(keyword.split("\\s+"));
+        CollectivePredicate predicate = new CollectivePredicate(EMPTY_KEYWORD_LIST,
+                EMPTY_KEYWORD_LIST, subjectList, EMPTY_KEYWORD_LIST);
+        FindCommand command = new FindCommand(predicate);
+        expectedModel.updateFilteredTuteeList(predicate);
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(List.of(BENSON, CARL), model.getFilteredTuteeList());
     }
 }
